--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.12",
-    "tw-merge": "^0.0.1-alpha.3"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
